--- a/landrules-react/src/styles/pages/Home.scss
+++ b/landrules-react/src/styles/pages/Home.scss
@@ -6,18 +6,23 @@
       position: absolute;
       width: 70%;
       margin-left: 10%;
-      margin-top: 5%;
+      margin-top: 3rem;
     }
     
-    h1 {
-      font-size: 3.5rem;
-      line-height: 1.2;
-      font-weight: 800;
+    aside {
       display: block;
       position: absolute;
       top: 5rem;
       right: 3rem;
       max-width: 500px;
+
+      h1 {
+        display: block;
+        width: 100%;
+        font-size: 3.5rem;
+        line-height: 1.2;
+        font-weight: 800;
+      }
     }
   }
 }
