--- a/landrules-react/src/App.scss
+++ b/landrules-react/src/App.scss
@@ -1,14 +1,14 @@
 // Heck ant designs css all my homies have a strong distaste for ant designs css
 $page-width: 800px;
 
-$primary-300: #C5D995; // Background color
+$primary-300: #c2dc7f; // Background color
 $primary-500: #8A9868;
 $primary-600: #727E56; // Darker background
 $primary-700: #5B7044;
 $primary-800: #3B412D;
-$primary-900: #2F3237;
+$primary-900: #2c3b48;
 
-$secondary-500: #D2573D;
+$secondary-500: #f8e4a4;
 
 @import "./styles/index.scss";
 @import "./styles/Layout.scss";
