--- a/landrules-react/src/styles/Button.scss
+++ b/landrules-react/src/styles/Button.scss
@@ -3,13 +3,13 @@
 
     &.button--secondary {
         background: $secondary-500;
-        color: white;
+        color: rgba(0, 0, 0, 0.8);
         font-weight: 500;
         padding: 8px 2rem;
         font-size: 0.8rem;
         line-height: 1.3;
         border-radius: 8px;
-        box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;;
+        box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 
         transition: 0.2s ease transform;
         transform: none;
