--- a/landrules-react/src/App.scss
+++ b/landrules-react/src/App.scss
@@ -16,3 +16,4 @@ $secondary-500: #f8e4a4;
 @import "./styles/Button.scss";
 
 @import "./styles/pages/Home.scss";
+@import "./styles/pages/Form.scss"
